--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,16 @@ h6 {
   font-family: "Geist", sans-serif;
 }
 body {
-  overflow: hidden;
+  margin: 0;
+  height: auto;
+  background-color: #000;
+  flex-grow: 1;
+  --cWidth: calc(100% - 30px);
+  --cMaxWidth: 1920px;
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
 }
 a {
   color: inherit;
@@ -55,25 +64,17 @@ main {
     opacity: 1;
   }
 }
-body {
-  margin: 0;
-  height: auto;
-  background-color: #000;
-  flex-grow: 1;
-  --cWidth: calc(100% - 30px);
-  --cMaxWidth: 1920px;
-  max-width: 100vw;
-  overflow-x: hidden;
-}
 .main-body {
   max-width: 100vw;
   overflow-x: hidden;
+  position: relative;
 }
 
 .container-main {
   width: 100%;
   margin: auto;
   position: relative;
+  overflow: visible;
 }
 .container1 {
   width: var(--cWidth);
